kubernetes/service.yaml
---
apiVersion: v1
kind: Service
metadata:
  name: fastapi-ping
  namespace: fastapi-ping
spec:
  selector:
    app: fastapi-ping
  ports:
    - protocol: TCP
      port: 8000
      targetPort: 8000
